--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,48 +1,45 @@
-version: '3'
+db:
+  env_file: .env
+  image: postgres:9.6
+  volumes:
+    - ./pgdata:/var/lib/postgresql/data/pgdata
 
-services:
-  db:
-    env_file: .env
-    image: postgres:9.6
-    volumes:
-      - ./pgdata:/var/lib/postgresql/data/pgdata
+rabbitmq:
+  env_file: .env
+  image: rabbitmq:3.6
 
-  rabbitmq:
-    env_file: .env
-    image: rabbitmq:3.6
-
-  celery:
-    build: ./app
-    command: celery worker -A webscrapy -l info
+celery:
+  build: ./app
+  command: celery worker -A webscrapy -l info
     # celery -A proj beat -l info --scheduler django_celery_beat.schedulers:DatabaseScheduler
-    depends_on:
-      - rabbitmq
-    env_file: .env
-    volumes:
-      - ./app:/usr/src/app
+  links:
+    - rabbitmq:rabbitmq
+  env_file: .env
+  volumes:
+    - ./app:/usr/src/app
 
-  django:
-    build: ./app
-    environment:
-      - DJANGO_SETTINGS_MODULE=webscrapy.settings
-    command: /usr/local/bin/gunicorn webscrapy.wsgi:application -w 2 -b :8000 --reload
-    depends_on:
-      - db
-      - celery
-      - rabbitmq
-    env_file: .env
-    volumes:
-      - ./app:/usr/src/app
+django:
+  build: ./app
+  environment:
+    - DJANGO_SETTINGS_MODULE=webscrapy.settings
+  command: /usr/local/bin/gunicorn webscrapy.wsgi:application -w 2 -b :8000 --reload
+  links:
+    - db:db
+    - celery:celery
+    - rabbitmq:rabbitmq
+  env_file: .env
+  volumes:
+    - ./app:/usr/src/app
 
-  nginx:
-    image: nginx:1.13
-    depends_on:
-     - django
-    ports:
-      - "80:80"
-      - "81:81"
-    volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-      - ./nginx/client.conf:/etc/nginx/conf.d/client.conf:ro
-      - ./app/static/:/usr/src/static
-      - ./client/dist/:/usr/src/client
+nginx:
+  image: nginx:1.13
+  links:
+   - django:django
+  ports:
+    - "80:80"
+    - "81:81"
+  volumes:
+    - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+    - ./nginx/client.conf:/etc/nginx/conf.d/client.conf:ro
+    - ./app/static/:/usr/src/static
+    - ./client/dist/:/usr/src/client
