--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -5,6 +5,6 @@ ENV C_FORCE_ROOT=1
 RUN mkdir /usr/src/app
 WORKDIR /usr/src/app
 
-ADD requirements.txt /usr/src/app
+ADD requirements.txt /usr/src/app/
 RUN pip install -r requirements.txt
 ADD . /usr/src/app
