frontend to news, rss and employees ok

--- a/nginx/client.conf
+++ b/nginx/client.conf
@@ -2,13 +2,11 @@ server {
 	listen 81;
 	server_name localhost;
 
-  root /usr/src/client;
-
-  access_log  /var/log/nginx/client.access.log;
-  error_log   /var/log/nginx/client.error.log;
+  root /usr/src/client/dist;
+	charset utf-8;
 
 	location / {
-		  try_files $uri $uri/ /index.html;
+		 try_files $uri $uri/ /index.html;
 	}
 
 }
