--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "ember-cli-uglify": "^1.2.0",
     "ember-data": "~2.14.9",
     "ember-datatables": "^0.1.0",
+    "ember-django-adapter": "^1.1.3",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
     "ember-resolver": "^4.0.0",
