--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,12 +1,14 @@
 server {
 	listen 80;
 	server_name localhost;
+	charset utf-8;
 
 	location / {
 		proxy_set_header	X-Real-IP $remote_addr;
 		proxy_set_header	Host $http_host;
 		proxy_set_header 	X-Forwarded-For $proxy_add_x_forwarded_for;
 		proxy_pass        http://django:8000;
+		add_header P3P 'CP="ALL DSP COR PSAa PSDa OUR NOR ONL UNI COM NAV"';
 	}
 
 	location /static/ {
